# dela

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  INSTALL.md  LICENSE  Makefile  README.md  cargo_crap_baseline.json  test_mcp_timeout.py
.github/: dependabot.yml
.github/workflows/: integration.yml  release.yml  rust.yml
dev_docs/: architecture.md  design.md  mcp_design.md  project_plan.md  release.md  releases.md  style.md  testing.md
make/: crap.mk  release.mk
resources/: bash.sh  fish.sh  ksh.sh  pwsh.ps1  zsh.sh
scripts/: dela_coverage_git_refs.jsonl  dela_coverage_git_refs.py
src/: allowlist.rs  builtins.rs  colors.rs  command_executor.rs  composed_paths.rs  config.rs  environment.rs  lib.rs  main.rs  package_manager.rs  parse_makefile.rs  parse_package_json.rs  parse_pyproject_toml.rs  prompt.rs  repo_root.rs  runner.rs  task_discovery.rs  task_shadowing.rs  types.rs
src/commands/: allow.rs  allow_command.rs  configure_shell.rs  deny.rs  get_command.rs  init.rs  list.rs  mcp.rs  mod.rs  run.rs  run_command.rs
src/mcp/: allowlist.rs  dto.rs  errors.rs  job_manager.rs  mod.rs  server.rs
src/parsers/: errors.rs  mod.rs  parse_cmake.rs  parse_docker_compose.rs  parse_github_actions.rs  parse_gradle.rs  parse_justfile.rs  parse_makefile.rs  parse_package_json.rs  parse_pom_xml.rs  parse_pyproject_toml.rs  parse_taskfile.rs  parse_travis_ci.rs  parse_turbo_json.rs
src/runners/: mod.rs  runners_package_json.rs  runners_pyproject_toml.rs
src/task_discovery/: cmake.rs  disambiguation.rs  docker_compose.rs  github_actions.rs  gradle.rs  justfile.rs  make.rs  maven.rs  npm.rs  python.rs  registry.rs  shell_scripts.rs  support.rs  taskfile.rs  travis_ci.rs  turbo.rs
tests/: Dockerfile.builder  run_tests.sh
tests/docker/: Dockerfile.bash  Dockerfile.fish  Dockerfile.ksh  Dockerfile.pwsh  Dockerfile.zsh  Makefile.test  Microsoft.PowerShell_profile.ps1  config.fish.test  kshrc.test  package.json.test  pyproject.toml.test  run_tests.sh  test_bash.sh  test_fish.sh  test_ksh.sh  test_pwsh.ps1  test_zsh.sh
tests/docker_bash/: Dockerfile  bashrc.test  test_bash.sh
tests/docker_common/: Dockerfile.builder
tests/docker_fish/: Dockerfile  config.fish.test  test_fish.sh
tests/docker_mcp/: Dockerfile  run.sh  test_mcp.py  test_mcp.sh
tests/docker_noinit/: Dockerfile  test_noinit.sh
tests/docker_pwsh/: Dockerfile  test_pwsh.ps1
tests/docker_unit/: Dockerfile  test_unit.sh
tests/docker_zsh/: Dockerfile  test_zsh.sh  zshrc.test
tests/resources/: example.py  pyproject.toml
tests/task_definitions/: .travis.yml  CMakeLists.txt  Justfile  Makefile  Taskfile.yml  build.gradle  build.gradle.kts  compose.yml  docker-compose.yml  package-lock.json  package.json  pom.xml  pyproject.toml  setup.py
tests/task_definitions/.dela/: allowlist.toml
tests/task_definitions/assets_py/: __init__.py  main.py
tests/task_definitions/github_actions/.github/workflows/: test.yml
tests/task_definitions/src/main/java/com/example/: App.java
tests/task_definitions/turbo_repo/: package.json  turbo.json
tests/task_definitions/turbo_repo/apps/web/: package.json  turbo.json
