[package]
name = "dela"
version = "0.0.6"
edition = "2024"
license = "MIT"
authors = ["Alexander Yankov"]
description = "A task runner that delegates the work to other tools"
repository = "https://github.com/aleyan/dela"
documentation = "https://github.com/aleyan/dela#readme"
readme = "README.md"
keywords = ["task-runner", "automation", "build", "make"]
categories = ["command-line-utilities", "development-tools", "development-tools::build-utils"]

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
makefile-lossless = "0.3.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
toml = "1.0.3"
once_cell = "1.21.3"
roxmltree = "0.21.1"
regex = "1.12.3"
colored = "3.1.1"
ratatui = "0.30.0"
crossterm = "0.29.0"
rmcp = { version = "0.17.0", features = ["server", "transport-io"] }
tokio = { version = "1.49.0", features = ["full"] }
schemars = "1.2.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
nix = { version = "0.31", features = ["signal"] }
dirs = "6.0.0"
shell-words = "1.1.1"

[dev-dependencies]
tempfile = "3.26.0"
serial_test = "3.4.0"
libc = "0.2.180"
