[project]
name = "assets_py"
version = "1.0.0"
requires-python = ">=3.12"
description = "Example project to demonstrate entry points"
dependencies = []

[project.scripts]
uv-build = "assets_py.main:main_build"
uv-test = "assets_py.main:main_test"

[tool.poetry]
name = "assets_py"
version = "0.1.0"
description = "Example project to demonstrate Poetry scripts"
authors = ["Alex"]
package-mode = false


[tool.poetry.dependencies]
python = ">=3.12"

[tool.poetry.scripts]
poetry-build = "assets_py.main:main_build"
poetry-test = "assets_py.main:main_test"


[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
